--- a/PAUP_QA-master/QA/Content/style.css
+++ b/PAUP_QA-master/QA/Content/style.css
@@ -34,6 +34,7 @@ nav {
 
 ul {
     list-style: none;
+    margin-left:5%;
 }
 
 li {
@@ -45,7 +46,7 @@ li {
 }
 
     li a:hover {
-        color: #000;
+        color: #8e8eff;
         transition: 0.3s;
     }
 
@@ -455,7 +456,7 @@ label {
     height: 25px;
     cursor: pointer;
     transition: 0.3s;
-    margin-right: 3px;
+    margin-left: 3px;
 }
 
     .best:hover {
@@ -505,12 +506,28 @@ label {
         color:#494985;
     }
 
-    textarea {
-        width: 400px;
-        height: 120px;
-        border: 1px solid #494985;
-        padding: 5px;
-    }
+.odgText {
+    width: 400px;
+    height: 120px;
+    border: 1px solid #494985;
+    padding: 5px;
+    margin:0px 0px -10px 0px;
+}
+
+textarea {
+    width: 90%;
+    height:100px;
+    margin-left: 4%;
+    margin-top: 3%;
+}
+
+input[type="file"] {
+    width:initial;
+    height:initial;
+    padding-left:0;
+    background-color:#fff;
+
+}
 
 .answer-form input {
     width: 100px;
@@ -568,6 +585,8 @@ textarea:focus {
 
 /* Responsive mobile */
 @media (min-width: 300px) and (max-width: 750px) {
+
+
     body, html {
         font-size: 15px;
     }
@@ -576,21 +595,24 @@ textarea:focus {
         text-align: center;
     }
 
+    .search-box {
+        width: 60%;
+        margin-left: 35px;
+    }
+
+    .category-select {
+        margin-left: 15%;
+        margin-top: -1px;
+        width:180px;
+    }
+
     nav {
         margin-left: 0px;
+        display:none;
     }
 
     li {
         margin-right: 20px;
-    }
-
-    .search-box {
-        width: 80%;
-        margin-left: 10px;
-    }
-
-    .category-select {
-        margin-right: 10px;
     }
 
     .search-input {
@@ -686,6 +708,126 @@ textarea:focus {
     .form-section {
         width: 80%;
     }
+
+    /* hamburger menu */
+    .hamburger-menu {
+        z-index: 2;
+        position: absolute;
+        top: 10px;
+        right: 20px;
+        width: 60px;
+        height: 8px;
+        cursor: pointer;
+    }
+
+    .bar,
+    .bar:after,
+    .bar:before {
+        width: 40px;
+        height: 5px;
+    }
+
+    .bar {
+        position: relative;
+        transform: translateY(25px);
+        background: rgb(255,255,255);
+        transition: all 0ms 300ms;
+    }
+
+        .bar.animate {
+            background: rgba(255, 255, 255, 0);
+        }
+
+        .bar:before {
+            content: "";
+            position: absolute;
+            left: 0;
+            bottom: 10px;
+            background: rgb(255,255,255);
+            transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+        }
+
+        .bar:after {
+            content: "";
+            position: absolute;
+            left: 0;
+            top: 10px;
+            background: rgb(255,255,255);
+            transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+        }
+
+        .bar.animate:after {
+            top: 0;
+            transform: rotate(45deg);
+            transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+            ;
+        }
+
+        .bar.animate:before {
+            bottom: 0;
+            transform: rotate(-45deg);
+            transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+            ;
+        }
+
+    /*nav menu*/
+
+    .hide {
+        opacity: 0;
+        left: 100%;
+        display: none;
+    }
+
+    .mobile-nav {
+        background: #494985;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        transition: .2s ease;
+        transition: opacity .5s ease;
+        -moz-transition: opacity .5s ease;
+        -webkit-transition: opacity .5s ease;
+        transition: left .5s ease-in-out;
+        z-index: 1;
+    }
+
+        .mobile-nav ul {
+            position: relative;
+            top: 50%;
+            transform: translateY(-50%);
+            list-style: none;
+        }
+
+        .mobile-nav a {
+            text-align: center;
+            font-size: 40px;
+            color: #fff;
+            opacity: 0;
+            text-decoration: none;
+            transition: opacity .9s ease-in-out;
+        }
+
+        .mobile-nav.show a {
+            text-align: center;
+            font-size: 30px;
+            color: #fff;
+            font-weight: bold;
+            opacity: 1;
+        }
+
+        .mobile-nav a:hover {
+            color: white;
+            font-weight: bold;
+            transition: 0.2s;
+        }
+
+    .li {
+        display: block;
+        margin-top: 5px;
+    }   
 }
 
 /*modalni prozor*/
@@ -770,6 +912,9 @@ textarea:focus {
 #uspjehOd {
     display:none;
 }
+#neuspjehOz {
+    display:none;
+}
 
 .zatvori-o {
     float: right;
@@ -792,6 +937,7 @@ textarea:focus {
     background-color: #f2dede;
     border-color: #ebccd1;
 }
+
 
 .alert-success {
     background-color: #dff0d8;
@@ -878,10 +1024,194 @@ textarea:focus {
         transition: 0.3s;
     }
 
+.li-right {
+    float: right;
+    margin-right: 15%;
+}
+
+#korisnikDetalji {
+    margin-right:1%;
+}
+
+@media (max-width:1360px) and (max-width:1560px) {
+    .category-select {
+        margin-left: 10%;
+    }
+
+    .category-select {
+        margin-left: 13%;
+        margin-top: -1.3px;
+    }
+}
+
+    @media (min-width:1025px) and (max-width:1360px) {
+        .category-select {
+            margin-left: 12%;
+        }
+
+        .question-container {
+            width: 60%;
+        }
+    }
+
+    @media (max-width: 750px) {
+
+        #korisnikDetalji {
+            margin-right: 1%;
+        }
+
+        .btn-odgovor {
+            margin-top: 10px;
+        }
+
+        .answer-buttons-box button {
+            width: 50px;
+            font-size: 12px;
+        }
+
+        .buttons-box {
+            width: 100%;
+            margin-left: 20px;
+        }
+
+            .buttons-box button {
+                font-size: 12px;
+            }
+
+       /* hamburger menu */
+        .hamburger-menu {
+            z-index: 2;
+            position: absolute;
+            top: 10px;
+            right: 20px;
+            width: 60px;
+            height: 8px;
+            cursor: pointer;
+        }
+
+        .bar,
+        .bar:after,
+        .bar:before {
+            width: 40px;
+            height: 5px;
+        }
+
+        .bar {
+            position: relative;
+            transform: translateY(25px);
+            background: rgb(255,255,255);
+            transition: all 0ms 300ms;
+        }
+
+            .bar.animate {
+                background: rgba(255, 255, 255, 0);
+            }
+
+            .bar:before {
+                content: "";
+                position: absolute;
+                left: 0;
+                bottom: 10px;
+                background: rgb(255,255,255);
+                transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+            }
+
+            .bar:after {
+                content: "";
+                position: absolute;
+                left: 0;
+                top: 10px;
+                background: rgb(255,255,255);
+                transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+            }
+
+            .bar.animate:after {
+                top: 0;
+                transform: rotate(45deg);
+                transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+                ;
+            }
+
+            .bar.animate:before {
+                bottom: 0;
+                transform: rotate(-45deg);
+                transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+                ;
+            }
+
+        /*nav menu*/
+
+
+        .hide {
+            opacity: 0;
+            left: 100%;
+            display: none;
+        }
+
+        .mobile-nav {
+            background: #494985;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            text-align: center;
+            transition: .2s ease;
+            transition: opacity .5s ease;
+            -moz-transition: opacity .5s ease;
+            -webkit-transition: opacity .5s ease;
+            transition: left .5s ease-in-out;
+            z-index: 1;
+        }
+
+            .mobile-nav ul {
+                position: relative;
+                top: 50%;
+                transform: translateY(-50%);
+                list-style: none;
+            }
+
+            .mobile-nav a {
+                text-align: center;
+                font-size: 40px;
+                color: #fff;
+                opacity: 0;
+                text-decoration: none;
+                transition: opacity .9s ease-in-out;
+            }
+
+            .mobile-nav.show a {
+                text-align: center;
+                font-size: 30px;
+                color: #fff;
+                font-weight: bold;
+                opacity: 1;
+            }
+
+            .mobile-nav a:hover {
+                color: white;
+                font-weight: bold;
+                transition: 0.2s;
+            }
+
+            .mobile-nav li {
+                display: block;
+                margin-top: 5px;
+            }
+
+        .li-right {
+            float: none;
+            margin: 0;
+        }
+    }
+
     /* Responsive tablet/mini-laptop */
     @media (min-width: 750px) and (max-width: 1024px) {
         body, html {
             font-size: 16px;
+        }
+        .search-input {
+            width: 35%;
         }
 
         header {
@@ -889,20 +1219,22 @@ textarea:focus {
         }
 
         nav {
-            margin-left: 0px;
+            display: none;
         }
 
         li {
             margin-right: 20px;
         }
 
+        .li-right {
+            float: none;
+            margin: 0;
+        }
+
         .search-box {
             width: 50%;
         }
 
-        .search-input {
-            width: 70%;
-        }
 
         .question-container {
             width: 90%;
@@ -995,17 +1327,146 @@ textarea:focus {
             width: 70%;
         }
 
-        textarea {
-            width: 90%;
+        .btn-odgovor {
+            margin-top: 10px;
         }
+
+        /* hamburger menu */
+        .hamburger-menu {
+            z-index: 2;
+            position: absolute;
+            top: 10px;
+            right: 20px;
+            width: 60px;
+            height: 8px;
+            cursor: pointer;
+        }
+
+        .bar,
+        .bar:after,
+        .bar:before {
+            width: 40px;
+            height: 5px;
+        }
+
+        .bar {
+            position: relative;
+            transform: translateY(25px);
+            background: rgb(255,255,255);
+            transition: all 0ms 300ms;
+        }
+
+            .bar.animate {
+                background: rgba(255, 255, 255, 0);
+            }
+
+            .bar:before {
+                content: "";
+                position: absolute;
+                left: 0;
+                bottom: 10px;
+                background: rgb(255,255,255);
+                transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+            }
+
+            .bar:after {
+                content: "";
+                position: absolute;
+                left: 0;
+                top: 10px;
+                background: rgb(255,255,255);
+                transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+            }
+
+            .bar.animate:after {
+                top: 0;
+                transform: rotate(45deg);
+                transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+                ;
+            }
+
+            .bar.animate:before {
+                bottom: 0;
+                transform: rotate(-45deg);
+                transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+                ;
+            }
+
+        /*nav menu*/
+
+
+        .hide {
+            opacity: 0;
+            left: 100%;
+            display: none;
+        }
+
+        .mobile-nav {
+            background: #494985;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            text-align: center;
+            transition: .2s ease;
+            transition: opacity .5s ease;
+            -moz-transition: opacity .5s ease;
+            -webkit-transition: opacity .5s ease;
+            transition: left .5s ease-in-out;
+            z-index: 1;
+        }
+
+            .mobile-nav ul {
+                position: relative;
+                top: 50%;
+                transform: translateY(-50%);
+                list-style: none;
+            }
+
+            .mobile-nav a {
+                text-align: center;
+                font-size: 40px;
+                color: #fff;
+                opacity: 0;
+                text-decoration: none;
+                transition: opacity .9s ease-in-out;
+            }
+
+            .mobile-nav.show a {
+                text-align: center;
+                font-size: 30px;
+                color: #fff;
+                font-weight: bold;
+                opacity: 1;
+            }
+
+            .mobile-nav a:hover {
+                color: white;
+                font-weight: bold;
+                transition: 0.2s;
+            }
+
+            .mobile-nav li {
+                display: block;
+                margin-top: 5px;
+            }
     }
 
     @media (min-width: 1024px) and (max-width: 1450px) {
         /*  QUESTION BLOCK */
         .question-block {
             width: 90%;
-            height: 90vh;
+            height: 93vh;
             overflow: auto;
+        }
+
+        .answ-container {
+            width: 100%;
+        }
+
+        .details {
+            margin: 10px 20px;
         }
 
         .header h1 {
@@ -1019,7 +1480,6 @@ textarea:focus {
 
         .answers-main-section {
             display: block;
-            width: 80%;
         }
 
         .no-answers {
@@ -1036,15 +1496,14 @@ textarea:focus {
                 font-weight: 700;
             }
 
-        .answ-container {
-            width: 50%;
-            margin: 20px 5%;
-        }
 
         .answer-form {
-            float: left;
             margin: 20px 50px;
             width: 70%;
+        }
+
+        .btn-odgovor {
+            margin-top: 10px;
         }
 
         textarea {
