--- a/PAUP_QA-master/QA/Views/App/AzurirajOdgovor.cshtml
+++ b/PAUP_QA-master/QA/Views/App/AzurirajOdgovor.cshtml
@@ -17,13 +17,17 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <title>@ViewBag.Title</title>
 </head>
 <body>
     <div id="sakrij">
     </div>
     <header>
-        <nav>
+        <div class="hamburger-menu">
+            <div class="bar"></div>
+        </div>
+        <div class="mobile-nav hide">
             <ul>
                 @if (TempData["dosaoSa"] != null)
                 {
@@ -34,10 +38,10 @@
                     <li>@Html.ActionLink("Natrag na pitanja", "Index", "App")</li>
                 }
             </ul>
-        </nav>
+        </div>
     </header>
     <section class="body">
-        <section class="form-section">
+        <section class="form-section" style="padding: 15px 15px;">
             <div id="poruka">
                 <div id="poruka_zaglavlje">
                     @if (TempData["dosaoSa"] == null)
@@ -60,10 +64,10 @@
             {
                 @Html.AntiForgeryToken()
                 @Html.LabelFor(model => model.Odgovor)<br />
-                @Html.TextAreaFor(model => model.Odgovor, new { htmlAttributes = new { @placeholder = "Upišite odgovor..." } })<br />
+                @Html.TextAreaFor(model => model.Odgovor, new { htmlAttributes = new { @placeholder = "Upišite odgovor..."} })<br />
                 @Html.ValidationMessageFor(m => m.Odgovor, "", new { @class = "validacija" })
                 @Html.HiddenFor(model => model.Id, new { Value = ViewBag.Id })
-                <button id="azurirajOdg" name="azurirajOdg" type="submit">
+                <button id="azurirajOdg" name="azurirajOdg" type="submit" style="margin: 25px 0%;">
                     Ažuriraj
                 </button>
             }
@@ -74,7 +78,7 @@
 <script type="text/javascript">
     function prozor() {
         var poruka = document.getElementById("poruka");
-        document.getElementById("poruka_tekst").style.lineHeight = "60px";
+        document.getElementById("poruka_tekst").style.lineHeight = "55px";
         document.getElementById("poruka_tekst").innerHTML = "<span id='kvacica-azuriraj'>&#x2714;</span> <br> Odgovor uspješno ažuriran!";
         poruka.classList.add("fadein");
         poruka.style.zIndex = 3;
@@ -83,6 +87,14 @@
         var tipka = document.getElementById("azurirajOdg");
         tipka.disabled = "disabled";
     }
+
+    (function () {
+        $('.hamburger-menu').on('click', function () {
+            $('.bar').toggleClass('animate');
+            var mobileNav = $('.mobile-nav');
+            mobileNav.toggleClass('hide show');
+        })
+    })();
 
 </script>
 
