--- a/PAUP_QA-master/QA/Views/App/AzurirajPitanje.cshtml
+++ b/PAUP_QA-master/QA/Views/App/AzurirajPitanje.cshtml
@@ -17,24 +17,35 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <title>@ViewBag.Title</title>
 </head>
 <body>
     <div id="sakrij">
     </div>
     <header>
-        <nav>
-            <ul>
-                @if (TempData["dosaoSa"] != null)
-                {
-                    <li><a href='@TempData["dosaoSa"]'>Povratak</a></li>
-                }
-                else
-                {
-                    <li>@Html.ActionLink("Natrag na pitanja", "Index", "App")</li>
-                }
-            </ul>
-        </nav>
+        <div class="hamburger-menu">
+            <div class="bar"></div>
+        </div>
+        <div class="mobile-nav hide">
+                <ul>
+                    @if (TempData["dosaoSa"] != null)
+                    {
+                        if (TempData["dosaoSa"].ToString().Contains("DodajKategoriju"))
+                        {
+                            <li>@Html.ActionLink("Natrag na pitanja", "Index", "App")</li>
+                        }
+                        else
+                        {
+                            <li><a href='@TempData["dosaoSa"]'>Povratak</a></li>
+                        }
+                    }
+                    else
+                    {
+                        <li>@Html.ActionLink("Natrag na pitanja", "Index", "App")</li>
+                    }
+                </ul>
+            </div>
     </header>
     <section class="body">
         <section class="form-section">
@@ -48,9 +59,18 @@
                     }
                     else
                     {
-                        <a href='@TempData["dosaoSa"]'>
-                            <span id="zatvori">&times;</span>
-                        </a>
+                        if (TempData["dosaoSa"].ToString().Contains("DodajKategoriju"))
+                        {
+                            <a href='@Url.Action("Index", "App")'>
+                                <span id="zatvori">&times;</span>
+                            </a>
+                        }
+                        else
+                        {
+                            <a href='@TempData["dosaoSa"]'>
+                                <span id="zatvori">&times;</span>
+                            </a>
+                        }
                     }
                 </div>
                 <div id="poruka_tekst"></div>
@@ -86,6 +106,14 @@
         var tipka = document.getElementById("azurirajPit");
         tipka.disabled = "disabled";
     }
+
+    (function () {
+        $('.hamburger-menu').on('click', function () {
+            $('.bar').toggleClass('animate');
+            var mobileNav = $('.mobile-nav');
+            mobileNav.toggleClass('hide show');
+        })
+    })();
 
 </script>
 
