--- a/PAUP_QA-master/QA/Views/App/BrisiOdgovor.cshtml
+++ b/PAUP_QA-master/QA/Views/App/BrisiOdgovor.cshtml
@@ -16,24 +16,28 @@
     <meta name="viewport" content="width=device-width" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <title>@ViewBag.Title</title>
 </head>
 <body>
     <div id="sakrij">
     </div>
     <header>
-        <nav>
-            <ul>
-                @if (TempData["dosaoSa"] != null)
-                {
-                    <li><a href='@TempData["dosaoSa"]'>Povratak</a></li>
-                }
-                else
-                {
-                    <li>@Html.ActionLink("Natrag na pitanja", "Index", "App")</li>
-                }
-            </ul>
-        </nav>
+        <div class="hamburger-menu">
+            <div class="bar"></div>
+        </div>
+        <div class="mobile-nav hide">
+                <ul>
+                    @if (TempData["dosaoSa"] != null)
+                    {
+                        <li><a href='@TempData["dosaoSa"]'>Povratak</a></li>
+                    }
+                    else
+                    {
+                        <li>@Html.ActionLink("Natrag na pitanja", "Index", "App")</li>
+                    }
+                </ul>
+</div>
     </header>
 
     <section class="body">
@@ -86,6 +90,14 @@
         var tipka = document.getElementById("obrisiOdg");
         tipka.disabled = "disabled";
     }
+
+    (function () {
+        $('.hamburger-menu').on('click', function () {
+            $('.bar').toggleClass('animate');
+            var mobileNav = $('.mobile-nav');
+            mobileNav.toggleClass('hide show');
+        })
+    })();
 
 </script>
 @Styles.Render("/Content/style.css")
