--- a/PAUP_QA-master/QA/Views/Korisnik/Brisi.cshtml
+++ b/PAUP_QA-master/QA/Views/Korisnik/Brisi.cshtml
@@ -17,13 +17,17 @@
     <meta name="viewport" content="width=device-width" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <title>@ViewBag.Title</title>
 </head>
 <body>
     <div id="sakrij">
     </div>
     <header>
-        <nav>
+        <div class="hamburger-menu">
+            <div class="bar"></div>
+        </div>
+        <div class="mobile-nav hide">
             <ul>
                 @if (TempData["dosaoSa"] != null)
                 {
@@ -34,25 +38,16 @@
                     <li>@Html.ActionLink("Natrag na korisnike", "Index", "Korisnik")</li>
                 }
             </ul>
-        </nav>
+            </div>
     </header>
 
     <section class="body">
         <section class="form-section" style="padding:0;">
             <div id="poruka">
                 <div id="poruka_zaglavlje">
-                    @if (TempData["dosaoSa"] == null)
-                    {
                         <a href='@Url.Action("Index", "Korisnik")'>
                             <span id="zatvori">&times;</span>
                         </a>
-                    }
-                    else
-                    {
-                        <a href='@TempData["dosaoSa"]'>
-                            <span id="zatvori">&times;</span>
-                        </a>
-                    }
                 </div>
                 <div id="poruka_tekst"></div>
             </div>
@@ -93,6 +88,14 @@
         var tipka = document.getElementById("obrisiKor");
         tipka.disabled = "disabled";
     }
+
+    (function () {
+        $('.hamburger-menu').on('click', function () {
+            $('.bar').toggleClass('animate');
+            var mobileNav = $('.mobile-nav');
+            mobileNav.toggleClass('hide show');
+        })
+    })();
 
 </script>
 @Styles.Render("/Content/style.css")
