--- a/PAUP_QA-master/QA/Views/Korisnik/Index.cshtml
+++ b/PAUP_QA-master/QA/Views/Korisnik/Index.cshtml
@@ -11,11 +11,15 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <title>@ViewBag.Title</title>
 </head>
 <body>
     <header>
-        <nav>
+        <div class="hamburger-menu">
+            <div class="bar"></div>
+        </div>
+        <div class="mobile-nav hide">
             <ul>
                 @if (User.Identity.IsAuthenticated && (User as LogiraniKorisnik).IsInRole(OvlastiKorisnik.Administrator))
                 {
@@ -26,11 +30,11 @@
                             Kreiraj PDF
                         </a>
                     </li>
-                    <li>@Html.ActionLink("Odjava", "Odjava", "Korisnik", null, new { @style = "float:right; margin-right:15%" })</li>
-                    <li>@Html.ActionLink(((User as LogiraniKorisnik).KorisnickoIme), "DetaljiKorisnik", "Korisnik", new { id = ((User as LogiraniKorisnik).Id) }, new { @style = "float:right; margin-right:1%", @id = "korisnikDetalji", @data_url = Url.Action("DetaljiKorisnik", "Korisnik", new { id = ((User as LogiraniKorisnik).Id) }) })</li>
+                    <li>@Html.ActionLink("Odjava", "Odjava", "Korisnik", null, new { @class = "li-right" })</li>
+                    <li>@Html.ActionLink(((User as LogiraniKorisnik).KorisnickoIme), "DetaljiKorisnik", "Korisnik", new { id = ((User as LogiraniKorisnik).Id) }, new { @class = "li-right", @id = "korisnikDetalji", @data_url = Url.Action("DetaljiKorisnik", "Korisnik", new { id = ((User as LogiraniKorisnik).Id) }) })</li>
                 }
             </ul>
-        </nav>
+            </div>
     </header>
     <div class="question-container" style="margin-top:100px;">
         <div class="category-name">Popis korisnika</div>
@@ -52,5 +56,14 @@
     </div>
 </body>
 </html>
+<script type="text/javascript">
+    (function () {
+        $('.hamburger-menu').on('click', function () {
+            $('.bar').toggleClass('animate');
+            var mobileNav = $('.mobile-nav');
+            mobileNav.toggleClass('hide show');
+        })
+    })();
+</script>
 @Styles.Render("/Content/style.css")
 
