--- a/PAUP_QA-master/QA/Views/Korisnik/Prijava.cshtml
+++ b/PAUP_QA-master/QA/Views/Korisnik/Prijava.cshtml
@@ -10,16 +10,20 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <title>@ViewBag.Title</title>
 </head>
 <body>
     <header>
-        <nav>
+        <div class="hamburger-menu">
+            <div class="bar"></div>
+        </div>
+        <div class="mobile-nav hide">
             <ul>
                 <li>@Html.ActionLink("Natrag na pitanja", "Index", "App")</li>
                 <li>@Html.ActionLink("Registracija", "Registracija", "Korisnik")</li>
             </ul>
-        </nav>
+            </div>
     </header>
         <section class="body">
             <section class="form-section">
@@ -37,7 +41,15 @@
         </section>
 </body>
 </html>
-
+<script type="text/javascript">
+    (function () {
+        $('.hamburger-menu').on('click', function () {
+            $('.bar').toggleClass('animate');
+            var mobileNav = $('.mobile-nav');
+            mobileNav.toggleClass('hide show');
+        })
+    })();
+</script>
 @Styles.Render("/Content/style.css")
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/jqueryval")
