--- a/PAUP_QA-master/QA/Views/Shared/_Layout.cshtml
+++ b/PAUP_QA-master/QA/Views/Shared/_Layout.cshtml
@@ -8,10 +8,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 <body>
     <header>
-        <nav>
+        <div class="hamburger-menu">
+            <div class="bar"></div>
+        </div>
+        <div class="mobile-nav hide">
             <ul>
                 @if (User.Identity.IsAuthenticated && (User as LogiraniKorisnik).IsInRole(OvlastiKorisnik.Administrator))
                 {
@@ -24,8 +28,8 @@
                             Kreiraj PDF
                         </a>
                     </li>
-                    <li>@Html.ActionLink("Odjava", "Odjava", "Korisnik", null, new { @style = "float:right; margin-right:15%" })</li>
-                    <li>@Html.ActionLink(((User as LogiraniKorisnik).KorisnickoIme), "DetaljiKorisnik", "Korisnik", new { id = ((User as LogiraniKorisnik).Id) }, new { @style = "float:right; margin-right:1%", @id = "korisnikDetalji", @data_url = Url.Action("DetaljiKorisnik", "Korisnik", new { id = ((User as LogiraniKorisnik).Id) }) })</li>
+                    <li>@Html.ActionLink("Odjava", "Odjava", "Korisnik", null, new { @class = "li-right" })</li>
+                    <li>@Html.ActionLink(((User as LogiraniKorisnik).KorisnickoIme), "DetaljiKorisnik", "Korisnik", new { id = ((User as LogiraniKorisnik).Id) }, new { @class = "li-right", @id = "korisnikDetalji", @data_url = Url.Action("DetaljiKorisnik", "Korisnik", new { id = ((User as LogiraniKorisnik).Id) }) })</li>
                 }
                 else if (User.Identity.IsAuthenticated && (User as LogiraniKorisnik).IsInRole(OvlastiKorisnik.Registriran))
                 {
@@ -36,8 +40,8 @@
                             Kreiraj PDF
                         </a>
                     </li>
-                    <li>@Html.ActionLink("Odjava", "Odjava", "Korisnik", null, new { @style = "float:right; margin-right:15%" })</li>
-                    <li>@Html.ActionLink(((User as LogiraniKorisnik).KorisnickoIme), "DetaljiKorisnik", "Korisnik", new { id = ((User as LogiraniKorisnik).Id) }, new { @style = "float:right; margin-right:1%", @id = "korisnikDetalji", @data_url = Url.Action("DetaljiKorisnik", "Korisnik", new { id = ((User as LogiraniKorisnik).Id) }) })</li>
+                    <li>@Html.ActionLink("Odjava", "Odjava", "Korisnik", null, new { @class = "li-right" })</li>
+                    <li>@Html.ActionLink(((User as LogiraniKorisnik).KorisnickoIme), "DetaljiKorisnik", "Korisnik", new { id = ((User as LogiraniKorisnik).Id) }, new { @class = "li-right", @id = "korisnikDetalji", @data_url = Url.Action("DetaljiKorisnik", "Korisnik", new { id = ((User as LogiraniKorisnik).Id) }) })</li>
                 }
                 else
                 {
@@ -50,8 +54,17 @@
                     </li>
                 }
             </ul>
-        </nav>
+        </div>
     </header>
+    <script>
+        (function () {
+            $('.hamburger-menu').on('click', function () {
+                $('.bar').toggleClass('animate');
+                var mobileNav = $('.mobile-nav');
+                mobileNav.toggleClass('hide show');
+            })
+        })();
+    </script>
     @RenderBody()
     @Styles.Render("/Content/style.css")
     @Scripts.Render("~/bundles/jquery")
