--- a/PAUP_QA-master/QA/Views/App/AzurirajKategoriju.cshtml
+++ b/PAUP_QA-master/QA/Views/App/AzurirajKategoriju.cshtml
@@ -38,7 +38,7 @@
                     }
                     else
                     {
-                        <li>@Html.ActionLink("Natrag na pitanja", "Index", "App")</li>
+                        <li>@Html.ActionLink("Početna", "Index", "App")</li>
                     }
                 </ul>
             </div>
