--- a/PAUP_QA-master/QA/Views/App/AzurirajPitanje.cshtml
+++ b/PAUP_QA-master/QA/Views/App/AzurirajPitanje.cshtml
@@ -33,7 +33,7 @@
                     {
                         if (TempData["dosaoSa"].ToString().Contains("DodajKategoriju"))
                         {
-                            <li>@Html.ActionLink("Natrag na pitanja", "Index", "App")</li>
+                            <li>@Html.ActionLink("Povratak", "Index", "App")</li>
                         }
                         else
                         {
@@ -42,7 +42,7 @@
                     }
                     else
                     {
-                        <li>@Html.ActionLink("Natrag na pitanja", "Index", "App")</li>
+                        <li>@Html.ActionLink("Početak", "Index", "Home")</li>
                     }
                 </ul>
             </div>
