--- a/PAUP_QA-master/QA/Views/Korisnik/ResetLozinke.cshtml
+++ b/PAUP_QA-master/QA/Views/Korisnik/ResetLozinke.cshtml
@@ -34,7 +34,7 @@
                 }
                 else
                 {
-                    <li>@Html.ActionLink("Natrag na korisnike", "Index", "Korisnik")</li>
+                    <li>@Html.ActionLink("Početak", "Index", "Home")</li>
                 }
             </ul>
             </div>
