--- a/PAUP_QA-master/QA/Views/App/AzurirajOdgovor.cshtml
+++ b/PAUP_QA-master/QA/Views/App/AzurirajOdgovor.cshtml
@@ -35,7 +35,7 @@
                 }
                 else
                 {
-                    <li>@Html.ActionLink("Natrag na pitanja", "Index", "App")</li>
+                    <li>@Html.ActionLink("Početak", "Index", "Home")</li>
                 }
             </ul>
         </div>
