--- a/PAUP_QA-master/QA/Views/App/DodajKategoriju.cshtml
+++ b/PAUP_QA-master/QA/Views/App/DodajKategoriju.cshtml
@@ -37,7 +37,7 @@
                     }
                     else
                     {
-                        <li>@Html.ActionLink("Natrag na pitanja", "Index", "App")</li>
+                        <li>@Html.ActionLink("Početak", "Index", "Home")</li>
                     }
                 </ul>
             </div>
