--- a/PAUP_QA-master/QA/Views/App/DodajPitanje.cshtml
+++ b/PAUP_QA-master/QA/Views/App/DodajPitanje.cshtml
@@ -32,11 +32,18 @@
             <ul>
                 @if (TempData["dosaoSa"] != null)
                 {
+                    if (TempData["dosaoSa"].ToString().Contains("DodajKategoriju"))
+                    {
+                        <li>@Html.ActionLink("Povratak", "Index", "App")</li>
+                    }
+                    else
+                    {
                     <li><a href='@TempData["dosaoSa"]'>Povratak</a></li>
+                    }
                 }
                 else
                 {
-                    <li>@Html.ActionLink("Natrag na pitanja", "Index", "App")</li>
+                    <li>@Html.ActionLink("Početak", "Index", "Home")</li>
                 }
             </ul>
             </div>
