--- a/PAUP_QA-master/QA/Views/App/DodajPitanje.cshtml
+++ b/PAUP_QA-master/QA/Views/App/DodajPitanje.cshtml
@@ -60,9 +60,18 @@
                     }
                     else
                     {
+                        if (TempData["dosaoSa"].ToString().Contains("DodajKategoriju"))
+                        {
+                <a href='@Url.Action("Index", "App")'>
+                    <span id="zatvori">&times;</span>
+                </a>
+                        }
+                        else
+                        {
                         <a href='@TempData["dosaoSa"]'>
                             <span id="zatvori">&times;</span>
                         </a>
+                        }
                     }
                 </div>
                 <div id="poruka_tekst"></div>
